--- a/public/403.html
+++ b/public/403.html
@@ -11,6 +11,8 @@ You have reached this page because you either:
 access requires login with more permissions than you have
 </ul>
 
+<p><a href='/'>Return to Home Page</a></p>
+
 <p>If you believe this is an error, please contact the admin
 at <a href='mailto:admin@amdflames.org'>admin@amdflames.org</a>
 </p>
