save before changing pdoPrep to prepPDO (resaved to fix errors in MxUtils)

--- a/public/help-template.html
+++ b/public/help-template.html
@@ -20,11 +20,7 @@
 <!-- <body onBlur = "hwin.close();"> -->
 <h4>Help</h4>
 <div id='helpbox' class='help'>
-<script>
-var elem = window.opener.document.getElementById('helpdiv');
-document.write(get_help());
-
-</script>
+<script>document.write(get_help());</script>
 </div>
 
 </body></html>
