--- a/public/help/profile.html
+++ b/public/help/profile.html
@@ -37,9 +37,9 @@
 
         	<tr><td>No Weekly Email</td><td>Once a week, more or less, a new Newsletter is prepared, and an email goes out to all members with a brief synopsis.  If you don't want these emails, check this box.  You will likely not visit the site any more, and eventually we will lose track of you.  This also irritates the admin, so please leave this box unchecked.
         	</td></tr>
-        <tr><td>Your Linkedin address </td><td>Will just be a hotlink to your linked in site.  If you care.  (There will never be a link to facebook on any page this guy creates.)
+        <tr><td>Your Linkedin address </td><td>Will just be a hotlink to your linked in site.  If you care.
         	</td></tr>
-        <tr><td>Your Favorite Website</td><td>Well, I guess you could put facebook in here.  Nothing's stopping you.  But something more interesting would be nice.
+        <tr><td>Your Favorite Website</td><td>Well, I guess you could put Facebook in here.  Nothing's stopping you.  It's your profile.
         	</td></tr>
 
         <tr><td>Photos</td><td>You can now add photos (or other assets) to your profile.
