--- a/public/help/assets.html
+++ b/public/help/assets.html
@@ -47,9 +47,9 @@ If you open the asset_editor with "asset_editor.php?id=nnn", it will open showin
 Below the Next Edit info, there are several buttons:
 <dl>
 <dt>Save</dt><dd>Save any changes made on this asset screen, remove it from the list,  and then show the results</dd>
-<dt>Save and Go Next</dt><dd>Save this asset, remove it from the list, and then show the one listed in the "Next Edit" field</dd>
+<dt>Save and Go Next</dt><dd>Save this asset, remove it from the list, and then show the one listed in the "Next Edit" field.  Put "0" in the next id field to open a new asset next. </dd>
 <td>Skip and Go Next</dt><dd>Do not save this asset, but remove it from the list and go to the next one. </dd>
-<dt>New></dt><dd>Open a new asset.  After entering info you can Save (which saves data and shows you the edit screen on the new asset), Save and Go Next (which saves and gives you another new asset) or Skip (which essentailly does nothing). The list is not affected.</dd>
+<dt>Skip and New</dt><dd>The current asset is removed from the save list, and a new asset is opened. Use this if you enter/edit an asset, then click Save to review, then want to enter a new one.</dd>
 </dl>
 </p>
 <p >Asset Data</p>
