--- a/public/help/article.html
+++ b/public/help/article.html
@@ -16,7 +16,7 @@
 
        </p>
 
-<p>Articles have an id,  a title, a topic, and content.  They may have a link for more info, and graphics as well.
+<p>Articles have an id, a title, a topic, and some content.  They may have a link for more info, and graphics as well.
 </p>
 <p class='bold'>Article Data</p>
 <table class='bordered row-lines'>
@@ -30,13 +30,12 @@
         <tr><td>Content</td><td>The content of the article, typically a few lines from a magazine article, or whatever you want to say. Content should normally be filled in, but you CAN publish an article without any content, but just title and a graphic. <br> The content field has a built-in editor using the symbols atthe top of the text box.  If you paste in content from Word, it will keep most of the styling.  You can just type and it will make paragraphs.  You can use the other tools to make lists, add web links, etc. </td></tr>
         <tr><td>Comment</td><td>Your comment on the story; appears in green below the story</td></tr>
         <tr><td colspan=2><hr /><b>Adding a Graphic, File, or other Asset</b>
-        <br>
-        	You add a graphic be entering its asset id number with your article. You can list several assets in the "Surrounding Assets" field or one in the "Central Asset" field.  The assets in the Surrounding list will be displayed as thumbnails along the left edge or top of your articles.  An Central Asset will completely fill the content area of your article.
-        	<br>
-            Assets are photos, movies or pdf files catalogued in the searchable "Asset" database on the site. Every asset has an id, title, and thumbnail.
-            <p>You can enter a graphic by entering its asset id number.  In the asset list field, you can enter several ids, separated by space or comma, and they will be displayed around your article.  You can enter a single id in the asset-main field, and that asset will fill the article space.<p>
-            <p>You get asset ids by either knowing one, or searching for one in the asset database, or creating a new one.  If you use the "Create Asset" button, you will get a new window where you can upload a file, and its new asset id will automatically be placed in your asset list.  If you use the "Search Assets" buttons on the edit screen, then you will enter some search criteria and get a list of matching assets.  For each asset you can click a button that says "Send ID", which will transfer the id for that asset back to your article.  Easy-peasy.
+        <p>This site stores all documents, videos, images, and external web pages as "Assets".  Every asset has an id and at least one "thumbnail" image, about 200 pixels wide.  When you add an asset to an article, its thumbnail image will be displayed, linked to the original source for the asset.</p>
 
+            <p>You can add a graphic to your story by entering its asset id number.  In the asset list field, you can enter several ids, separated by space or comma, and they will be displayed on the left or top of your article.  If you enter a single id in the asset-main field, that asset will fill the article space.<p>
+
+            <p>You get asset ids by either knowing one, or searching for one in the asset database, or creating a new one.  If you use the "Create Asset" button, you will get a new window where you can upload a file, and its new asset id will automatically be placed in your asset list.  If you use the "Search Assets" buttons on the edit screen, then you see the Asset Search screen and can enter some search criteria and get a list of matching assets.  For each asset you can click a button that says "Send ID", which will transfer the id for that asset back to your article.  Easy-peasy.
+			</p>
           </td></tr>
 
             <tr><td ><b>Create New Asset</b></td><td>Open the Quick Asset Editor to upload a new graphic and have the id copied into your asset list.  The Quick Asset Editor has its own help window.
@@ -46,7 +45,7 @@
             <tr><td>Allow Comments?</td><td>Check this box to permit people to add comments to the article.  You will get an email anytime someone comments on an article you enter.</td></tr>
             <tr><td>Allow Votes?</td><td>Check box to add the Interesting: up/down
             tools to your article.  Sometimes voting isn't appropriate.</td></tr>
-            <tr><td>Queue for Next</td><td>(admin only) This lets you choose whether or not this article is queued for the next newsletter.</td></tr>
+            <tr><td>Queue for Next (editor only)</td><td> This lets you choose whether or not this article is queued for the next newsletter.</td></tr>
         </table>
 
 
