--- a/public/help/assets.html
+++ b/public/help/assets.html
@@ -18,6 +18,7 @@ have been uploaded to the site over the years.  The assets have been (mostly)
 indexed in a database for easy search and retrieval.  Use <a href='/asset_search.php' target='asearch'>Asset Search</a> to
 find and retrieve an asset.</p>
 <p>Assets are stored as the original document and also one or more fixed size 'thumbnails'.  Thumbnails are images used to display the asset in news articles and elsewhere.  Clicking on a thumbnail retrieves the original image. Every asset has a thumbnail, which may be a version of a graphic, a youtube thumbnail, a image of a pdf page, or an icon representing the document type.</p>
+<p>You can upload most types of files as an asset.  NOT INCLUDING the new Apple HEIC format.</p>
 
 <p>Assets have various attributes, including a title, caption, vintage, and keywords,
 a "source" - the original document referenced, a "type" - Audio, Video, Document, Graphic, and optionally "Tags" - check boxes that you can search for.
