--- a/public/help/profile.html
+++ b/public/help/profile.html
@@ -32,6 +32,7 @@
         	</td></tr>
         <tr><td>Current Email</td><td>This is the email that newsletters are sent to and that members may be able to see (see Hide Email below.)  You can change this email, but it will cause a verification email to go to your new email.  If you don't respond to the verification, the admin will get upset.
         	</td></tr>
+        <tr><td>User name</td><td>This is the name  for you that appears in many places on the site.  You can change it here.</td></tr>
         <tr><td>Hide Email</td><td>Checking this causes your email to be hidden from other members.  You will still get the newsletter, and members can send an email to you through the system without ever seeing your email.
         	</td></tr>
 
