--- a/public/403.html
+++ b/public/403.html
@@ -8,7 +8,8 @@
 You have reached this page because you either:
 <li> timed out of your login; or
 <li> the page you tried to
-access requires login with more permissions than you have
+access requires login with more permissions than you have; or
+<li> you have disabled javascript.
 </ul>
 
 <p><a href='/'>Return to Home Page</a></p>
@@ -16,3 +17,11 @@ access requires login with more permissions than you have
 <p>If you believe this is an error, please contact the admin
 at <a href='mailto:admin@amdflames.org'>admin@amdflames.org</a>
 </p>
+
+<noscript>
+
+    <div class="red">
+    You don't have javascript enabled.
+    This site requires javascript.
+    </div>
+</noscript>
