added javascript messageto 403 page

--- a/public/403.html
+++ b/public/403.html
@@ -20,8 +20,8 @@ at <a href='mailto:admin@amdflames.org'>admin@amdflames.org</a>
 
 <noscript>
 
-    <div class="red">
+    <p class="red">
     You don't have javascript enabled.
     This site requires javascript.
-    </div>
+    </p>
 </noscript>
