added javascript messageto 403 page

--- a/public/403.html
+++ b/public/403.html
@@ -20,7 +20,7 @@ at <a href='mailto:admin@amdflames.org'>admin@amdflames.org</a>
 
 <noscript>
 
-    <p class="red">
+    <p style='color:red;'>
     You don't have javascript enabled.
     This site requires javascript.
     </p>
