--- a/public/403.html
+++ b/public/403.html
@@ -3,20 +3,17 @@
 <title>403 Forbidden</title>
 </head>
 <body>
-<h1>403 Forbidden</h1>
+<h1>403 Permission Denied</h1>
+<p>Your current login does not have sufficient permissions
+to access this page.</p>
+<p>Your previous login may have expired, or your are trying to reach a page that you don't have access to.  Also, this site required javascript and cookies, so be sure those are enabled in your browser.</p>
 
-You have reached this page because you either:
-<li> timed out of your login; or
-<li> the page you tried to
-access requires login with more permissions than you have; or
-<li> you have disabled javascript.
-</ul>
 
-<p><a href='/'>Return to Home Page</a></p>
-
-<p>If you believe this is an error, please contact the admin
+<p>Try logging in again.  If you believe this is an error, please contact the admin
 at <a href='mailto:admin@amdflames.org'>admin@amdflames.org</a>
 </p>
+
+<p><a href='/'>Return to Home Page</a></p>
 
 <noscript>
 
